--- a/Assets/CSS/inscription.css
+++ b/Assets/CSS/inscription.css
@@ -113,6 +113,7 @@ nav {
 
         .nav-right__user-icon__contener {
             border-radius: 10px;
+            padding: 30px 5px 0 5px;
         }
 
         .nav-right__user-icon__contener:hover {
@@ -228,7 +229,7 @@ nav {
             color: white;
             border-radius: 10px;
             padding: 5px;
-            transition: .2s;
+            transition: .5s;
         }
 
         .registerbtn:hover {
